@@ -1,3 +1,12 @@
+Thu May 21 17:44:53 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* proc.c: fix issues caused by binding created from Method#to_proc.
+	  [Bug #11163]
+
+	* vm.c (vm_cref_new_toplevel): export as rb_vm_cref_new_toplevel().
+
+	* test/ruby/test_method.rb: add some assersions.
+
 Thu May 21 17:29:26 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* lib/matrix.rb: added documentation for Matrix#empty and Matrix#/
